--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
-    "typescript": "2.6.2"
+    "typescript": "^2.9.2"
   },
   "description": "An Ionic project"
 }
